--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:theme="@android:style/Theme.NoTitleBar"
-            android:screenOrientation="portrait"
-            android:launchMode="singleInstance">
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".map.MapGuideActivity"
             android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
