--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:value="74miyRO7qZbzKOKC7yzKeQU2" />
         <activity
             android:name=".activity.FirstLoading"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@style/ActivityNoTitleTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,14 +55,15 @@
         </activity>
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
+            android:theme="@style/ActivityNoTitleTheme"
             android:screenOrientation="portrait">
         </activity>
         <activity android:name=".map.MapGuideActivity"
             android:configChanges="orientation|screenSize|keyboard|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar"/>
         <activity android:name=".activity.SearchActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar"
+            android:theme="@style/ActivityNoTitleTheme"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.LoginActivity"
             android:label="登录"
